[tool.poetry]
name = "vsviridoff_brain_games_v2"
version = "0.1.0"
description = ""
authors = ["Vladislav Sviridov <vlad.sviridoff.bz@gmail.com>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "test_repo"
url = "https://test.pypi.org/legacy/"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
