[tool.poetry]
name = "vsviridoff_brain_games_v2"
version = "0.4.0"
description = ""
authors = ["Vladislav Sviridov <vlad.sviridoff.bz@gmail.com>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[[tool.poetry.source]]
name = "test_repo"
url = "https://test.pypi.org/legacy/"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

